<resources>
    <string name="app_name">WishMe_Android</string>
    <string name="change_photo_dialog">ChangePhotoDialog</string>
    <string name="sign_up_2">SignUp2</string>
    <string name="wishes_list">WishesFragment</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="create_wishlist">CreateWishlistDialog</string>
    <string name="what_is_your_wish">What is your wish?</string>
    <string name="average_price">What\'s the average price?</string>
    <string name="website_link">Let\'s add a website link!</string>
    <string name="a_short_description">A short description:</string>
    <string name="rating_text">From 1 to 5, how much do you want it?</string>

</resources>
