<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="com.easv.wishme.wishme_android.fragments.EditProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/snippet_wish_edit" />
        </RelativeLayout>
    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout1"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/relLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp">


                <ImageView
                    android:id="@+id/wishImage"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp" />

                <ProgressBar
                    android:id="@+id/imageProgressBar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:visibility="invisible" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivWish"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_wishlist_item" />

                    <EditText
                        android:id="@+id/name_Info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/what_is_your_wish"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivPrice"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_price" />

                    <EditText
                        android:id="@+id/wishPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/average_price"
                        android:inputType="textCapCharacters"
                        android:maxLength="8"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivWebsite"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_website" />

                    <EditText
                        android:id="@+id/websiteTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/website_link"
                        android:inputType="textUri"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivDescription"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/ic_description" />

                    <EditText
                        android:id="@+id/descriptionTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/a_short_description"
                        android:inputType="textCapSentences"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                </LinearLayout>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/rating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_semibold"
                            android:gravity="center_horizontal"
                            android:text="@string/rating_text"
                            android:textSize="18sp" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/rating"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="15dp"
                            android:numStars="5"
                            android:stepSize="1" />

                        <TextView
                            android:id="@+id/ratingText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ratingBar"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:gravity="center_horizontal"
                            android:textSize="15sp" />

                    </RelativeLayout>


                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>